StakeholdersTool.java => ProjectTool